src/objects/CRM_WF_Checklist_Variables__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Checklist_Principal__c</fullName>
        <label>Checklist Principal</label>
        <referenceTo>CRM_WF_Checklist__c</referenceTo>
        <relationshipName>Checklist_Adicionales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Documento_Variable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Documento Variable</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Otro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Variables__c</fullName>
        <label>Checklist Variable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrancón</fullName>
                </value>
                <value>
                    <fullName>Arte</fullName>
                </value>
                <value>
                    <fullName>Capacitación a Franquicia</fullName>
                </value>
                <value>
                    <fullName>Capacitación al SUN</fullName>
                </value>
                <value>
                    <fullName>Capacitación DAR</fullName>
                </value>
                <value>
                    <fullName>Capacitación JPNs</fullName>
                </value>
                <value>
                    <fullName>Capacitación Línea Bancomer / #1000</fullName>
                </value>
                <value>
                    <fullName>Certificación nuevos productos</fullName>
                </value>
                <value>
                    <fullName>Circuito de atención a incidencias</fullName>
                </value>
                <value>
                    <fullName>Circuito de contratacion EECC</fullName>
                </value>
                <value>
                    <fullName>Circuitos de atención LB</fullName>
                </value>
                <value>
                    <fullName>Circuitos de atención SUN, DAR, LB, #1000, Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Comité ARO o GRO (Normativa, auditorías, etc.)</fullName>
                </value>
                <value>
                    <fullName>Comité de DAR</fullName>
                </value>
                <value>
                    <fullName>Comité Franquicia</fullName>
                </value>
                <value>
                    <fullName>Concurso a la Red</fullName>
                </value>
                <value>
                    <fullName>Etiquetas en EECC (Campañas especiales)</fullName>
                </value>
                <value>
                    <fullName>Formación online</fullName>
                </value>
                <value>
                    <fullName>Formación presencial (escuela comercial)</fullName>
                </value>
                <value>
                    <fullName>Guía operativa Apps / Herramientas / Procesos</fullName>
                </value>
                <value>
                    <fullName>Incentivación</fullName>
                </value>
                <value>
                    <fullName>Insumos diarios para la Red</fullName>
                </value>
                <value>
                    <fullName>Intranet / Site de atención a la Red</fullName>
                </value>
                <value>
                    <fullName>Mkt dinámico ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Modificación en las condiciones / Vigencia de la campaña</fullName>
                </value>
                <value>
                    <fullName>Nuevos Protocolos</fullName>
                </value>
                <value>
                    <fullName>Postales a ejecutivos</fullName>
                </value>
                <value>
                    <fullName>Presentación comercial</fullName>
                </value>
                <value>
                    <fullName>Presentación comercial para la Red</fullName>
                </value>
                <value>
                    <fullName>Prontuario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Checklist Variable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>CLV-{0000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>